feat(gold-price-chart): 增加图表缩放和拖拽功能
- 在 gold-price-chart.html 中添加了 chartjs-plugin-zoom 插件
- 在 gold-price-chart.js 中配置了缩放和拖拽相关的选项
- 优化了图表的响应式布局和样式

--- a/gold-price-chart.html
+++ b/gold-price-chart.html
@@ -27,6 +27,7 @@
     </div>
 
     <script src="js/chart.js"></script>
+    <script src="js/chartjs-plugin-zoom1.2.0.js"></script>
     <script src="js/gold-price-chart.js"></script>
 </body>
 </html>
